src/main/java/ru/spbau/jvm/scala/calculator/AnotherShittyCalcParser.java
// Generated from /home/jetbrains/au_docs_ijJ9eOA8/Kotlin_Scala/scala-2018/src/main/antlr/AnotherShittyCalc.g4 by ANTLR 4.7
package ru.spbau.jvm.scala.calculator;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class AnotherShittyCalcParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, BoolLiteral=3, TRUE=4, FALSE=5, Literal=6, PLUS=7, MINUS=8, 
		MULT=9, DIV=10, MOD=11, EQUAL=12, NOT_EQUAL=13, GT=14, GE=15, LT=16, LE=17, 
		AND=18, OR=19, NEWLINE=20, SPACES=21;
	public static final int
		RULE_expression = 0, RULE_logicExpr = 1, RULE_intExpr = 2, RULE_logicOrExpr = 3, 
		RULE_logicAndExpr = 4, RULE_atomLogicExpr = 5, RULE_equalityExpr = 6, 
		RULE_additionExp = 7, RULE_multiplyExp = 8, RULE_atomExp = 9;
	public static final String[] ruleNames = {
		"expression", "logicExpr", "intExpr", "logicOrExpr", "logicAndExpr", "atomLogicExpr", 
		"equalityExpr", "additionExp", "multiplyExp", "atomExp"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'('", "')'", null, "'true'", "'false'", null, "'+'", "'-'", "'*'", 
		"'/'", "'%'", "'=='", "'!='", "'>'", "'>='", "'<'", "'<='", "'&&'", "'||'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, null, null, "BoolLiteral", "TRUE", "FALSE", "Literal", "PLUS", "MINUS", 
		"MULT", "DIV", "MOD", "EQUAL", "NOT_EQUAL", "GT", "GE", "LT", "LE", "AND", 
		"OR", "NEWLINE", "SPACES"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "AnotherShittyCalc.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public AnotherShittyCalcParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ExpressionContext extends ParserRuleContext {
		public LogicExprContext logicExpr() {
			return getRuleContext(LogicExprContext.class,0);
		}
		public IntExprContext intExpr() {
			return getRuleContext(IntExprContext.class,0);
		}
		public ExpressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expression; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AnotherShittyCalcVisitor ) return ((AnotherShittyCalcVisitor<? extends T>)visitor).visitExpression(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ExpressionContext expression() throws RecognitionException {
		ExpressionContext _localctx = new ExpressionContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_expression);
		try {
			setState(22);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(20);
				logicExpr();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(21);
				intExpr();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LogicExprContext extends ParserRuleContext {
		public LogicOrExprContext logicOrExpr() {
			return getRuleContext(LogicOrExprContext.class,0);
		}
		public LogicExprContext logicExpr() {
			return getRuleContext(LogicExprContext.class,0);
		}
		public List<TerminalNode> SPACES() { return getTokens(AnotherShittyCalcParser.SPACES); }
		public TerminalNode SPACES(int i) {
			return getToken(AnotherShittyCalcParser.SPACES, i);
		}
		public LogicExprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_logicExpr; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AnotherShittyCalcVisitor ) return ((AnotherShittyCalcVisitor<? extends T>)visitor).visitLogicExpr(this);
			else return visitor.visitChildren(this);
		}
	}

	public final LogicExprContext logicExpr() throws RecognitionException {
		LogicExprContext _localctx = new LogicExprContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_logicExpr);
		int _la;
		try {
			setState(41);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(24);
				logicOrExpr();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(25);
				match(T__0);
				setState(29);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==SPACES) {
					{
					{
					setState(26);
					match(SPACES);
					}
					}
					setState(31);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(32);
				logicExpr();
				setState(36);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==SPACES) {
					{
					{
					setState(33);
					match(SPACES);
					}
					}
					setState(38);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(39);
				match(T__1);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class IntExprContext extends ParserRuleContext {
		public AdditionExpContext additionExp() {
			return getRuleContext(AdditionExpContext.class,0);
		}
		public IntExprContext intExpr() {
			return getRuleContext(IntExprContext.class,0);
		}
		public List<TerminalNode> SPACES() { return getTokens(AnotherShittyCalcParser.SPACES); }
		public TerminalNode SPACES(int i) {
			return getToken(AnotherShittyCalcParser.SPACES, i);
		}
		public IntExprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_intExpr; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AnotherShittyCalcVisitor ) return ((AnotherShittyCalcVisitor<? extends T>)visitor).visitIntExpr(this);
			else return visitor.visitChildren(this);
		}
	}

	public final IntExprContext intExpr() throws RecognitionException {
		IntExprContext _localctx = new IntExprContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_intExpr);
		int _la;
		try {
			setState(60);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(43);
				additionExp();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(44);
				match(T__0);
				setState(48);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==SPACES) {
					{
					{
					setState(45);
					match(SPACES);
					}
					}
					setState(50);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(51);
				intExpr();
				setState(55);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==SPACES) {
					{
					{
					setState(52);
					match(SPACES);
					}
					}
					setState(57);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(58);
				match(T__1);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LogicOrExprContext extends ParserRuleContext {
		public LogicAndExprContext var;
		public LogicAndExprContext logicAndExpr;
		public List<LogicAndExprContext> vars = new ArrayList<LogicAndExprContext>();
		public List<LogicAndExprContext> logicAndExpr() {
			return getRuleContexts(LogicAndExprContext.class);
		}
		public LogicAndExprContext logicAndExpr(int i) {
			return getRuleContext(LogicAndExprContext.class,i);
		}
		public List<TerminalNode> SPACES() { return getTokens(AnotherShittyCalcParser.SPACES); }
		public TerminalNode SPACES(int i) {
			return getToken(AnotherShittyCalcParser.SPACES, i);
		}
		public LogicOrExprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_logicOrExpr; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AnotherShittyCalcVisitor ) return ((AnotherShittyCalcVisitor<? extends T>)visitor).visitLogicOrExpr(this);
			else return visitor.visitChildren(this);
		}
	}

	public final LogicOrExprContext logicOrExpr() throws RecognitionException {
		LogicOrExprContext _localctx = new LogicOrExprContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_logicOrExpr);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(62);
			((LogicOrExprContext)_localctx).var = logicAndExpr();
			setState(79);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,9,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(66);
					_errHandler.sync(this);
					_la = _input.LA(1);
					while (_la==SPACES) {
						{
						{
						setState(63);
						match(SPACES);
						}
						}
						setState(68);
						_errHandler.sync(this);
						_la = _input.LA(1);
					}
					setState(69);
					match(OR);
					setState(73);
					_errHandler.sync(this);
					_la = _input.LA(1);
					while (_la==SPACES) {
						{
						{
						setState(70);
						match(SPACES);
						}
						}
						setState(75);
						_errHandler.sync(this);
						_la = _input.LA(1);
					}
					setState(76);
					((LogicOrExprContext)_localctx).logicAndExpr = logicAndExpr();
					((LogicOrExprContext)_localctx).vars.add(((LogicOrExprContext)_localctx).logicAndExpr);
					}
					} 
				}
				setState(81);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,9,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LogicAndExprContext extends ParserRuleContext {
		public AtomLogicExprContext var;
		public AtomLogicExprContext atomLogicExpr;
		public List<AtomLogicExprContext> vars = new ArrayList<AtomLogicExprContext>();
		public List<AtomLogicExprContext> atomLogicExpr() {
			return getRuleContexts(AtomLogicExprContext.class);
		}
		public AtomLogicExprContext atomLogicExpr(int i) {
			return getRuleContext(AtomLogicExprContext.class,i);
		}
		public List<TerminalNode> SPACES() { return getTokens(AnotherShittyCalcParser.SPACES); }
		public TerminalNode SPACES(int i) {
			return getToken(AnotherShittyCalcParser.SPACES, i);
		}
		public LogicAndExprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_logicAndExpr; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AnotherShittyCalcVisitor ) return ((AnotherShittyCalcVisitor<? extends T>)visitor).visitLogicAndExpr(this);
			else return visitor.visitChildren(this);
		}
	}

	public final LogicAndExprContext logicAndExpr() throws RecognitionException {
		LogicAndExprContext _localctx = new LogicAndExprContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_logicAndExpr);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(82);
			((LogicAndExprContext)_localctx).var = atomLogicExpr();
			setState(99);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,12,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(86);
					_errHandler.sync(this);
					_la = _input.LA(1);
					while (_la==SPACES) {
						{
						{
						setState(83);
						match(SPACES);
						}
						}
						setState(88);
						_errHandler.sync(this);
						_la = _input.LA(1);
					}
					setState(89);
					match(AND);
					setState(93);
					_errHandler.sync(this);
					_la = _input.LA(1);
					while (_la==SPACES) {
						{
						{
						setState(90);
						match(SPACES);
						}
						}
						setState(95);
						_errHandler.sync(this);
						_la = _input.LA(1);
					}
					setState(96);
					((LogicAndExprContext)_localctx).atomLogicExpr = atomLogicExpr();
					((LogicAndExprContext)_localctx).vars.add(((LogicAndExprContext)_localctx).atomLogicExpr);
					}
					} 
				}
				setState(101);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,12,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AtomLogicExprContext extends ParserRuleContext {
		public EqualityExprContext value;
		public Token constValue;
		public LogicOrExprContext exp;
		public EqualityExprContext equalityExpr() {
			return getRuleContext(EqualityExprContext.class,0);
		}
		public TerminalNode BoolLiteral() { return getToken(AnotherShittyCalcParser.BoolLiteral, 0); }
		public LogicOrExprContext logicOrExpr() {
			return getRuleContext(LogicOrExprContext.class,0);
		}
		public List<TerminalNode> SPACES() { return getTokens(AnotherShittyCalcParser.SPACES); }
		public TerminalNode SPACES(int i) {
			return getToken(AnotherShittyCalcParser.SPACES, i);
		}
		public AtomLogicExprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_atomLogicExpr; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AnotherShittyCalcVisitor ) return ((AnotherShittyCalcVisitor<? extends T>)visitor).visitAtomLogicExpr(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AtomLogicExprContext atomLogicExpr() throws RecognitionException {
		AtomLogicExprContext _localctx = new AtomLogicExprContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_atomLogicExpr);
		int _la;
		try {
			setState(120);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,15,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(102);
				((AtomLogicExprContext)_localctx).value = equalityExpr();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(103);
				((AtomLogicExprContext)_localctx).constValue = match(BoolLiteral);
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(104);
				match(T__0);
				setState(108);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==SPACES) {
					{
					{
					setState(105);
					match(SPACES);
					}
					}
					setState(110);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(111);
				((AtomLogicExprContext)_localctx).exp = logicOrExpr();
				setState(115);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==SPACES) {
					{
					{
					setState(112);
					match(SPACES);
					}
					}
					setState(117);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(118);
				match(T__1);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class EqualityExprContext extends ParserRuleContext {
		public IntExprContext var1;
		public Token op;
		public IntExprContext var2;
		public List<IntExprContext> intExpr() {
			return getRuleContexts(IntExprContext.class);
		}
		public IntExprContext intExpr(int i) {
			return getRuleContext(IntExprContext.class,i);
		}
		public TerminalNode EQUAL() { return getToken(AnotherShittyCalcParser.EQUAL, 0); }
		public TerminalNode NOT_EQUAL() { return getToken(AnotherShittyCalcParser.NOT_EQUAL, 0); }
		public TerminalNode LT() { return getToken(AnotherShittyCalcParser.LT, 0); }
		public TerminalNode LE() { return getToken(AnotherShittyCalcParser.LE, 0); }
		public TerminalNode GT() { return getToken(AnotherShittyCalcParser.GT, 0); }
		public TerminalNode GE() { return getToken(AnotherShittyCalcParser.GE, 0); }
		public List<TerminalNode> SPACES() { return getTokens(AnotherShittyCalcParser.SPACES); }
		public TerminalNode SPACES(int i) {
			return getToken(AnotherShittyCalcParser.SPACES, i);
		}
		public EqualityExprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_equalityExpr; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AnotherShittyCalcVisitor ) return ((AnotherShittyCalcVisitor<? extends T>)visitor).visitEqualityExpr(this);
			else return visitor.visitChildren(this);
		}
	}

	public final EqualityExprContext equalityExpr() throws RecognitionException {
		EqualityExprContext _localctx = new EqualityExprContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_equalityExpr);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(122);
			((EqualityExprContext)_localctx).var1 = intExpr();
			setState(126);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==SPACES) {
				{
				{
				setState(123);
				match(SPACES);
				}
				}
				setState(128);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(129);
			((EqualityExprContext)_localctx).op = _input.LT(1);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << EQUAL) | (1L << NOT_EQUAL) | (1L << GT) | (1L << GE) | (1L << LT) | (1L << LE))) != 0)) ) {
				((EqualityExprContext)_localctx).op = (Token)_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			setState(133);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==SPACES) {
				{
				{
				setState(130);
				match(SPACES);
				}
				}
				setState(135);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(136);
			((EqualityExprContext)_localctx).var2 = intExpr();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AdditionExpContext extends ParserRuleContext {
		public MultiplyExpContext var;
		public Token PLUS;
		public List<Token> ops = new ArrayList<Token>();
		public Token MINUS;
		public Token _tset207;
		public MultiplyExpContext multiplyExp;
		public List<MultiplyExpContext> vars = new ArrayList<MultiplyExpContext>();
		public List<MultiplyExpContext> multiplyExp() {
			return getRuleContexts(MultiplyExpContext.class);
		}
		public MultiplyExpContext multiplyExp(int i) {
			return getRuleContext(MultiplyExpContext.class,i);
		}
		public List<TerminalNode> PLUS() { return getTokens(AnotherShittyCalcParser.PLUS); }
		public TerminalNode PLUS(int i) {
			return getToken(AnotherShittyCalcParser.PLUS, i);
		}
		public List<TerminalNode> MINUS() { return getTokens(AnotherShittyCalcParser.MINUS); }
		public TerminalNode MINUS(int i) {
			return getToken(AnotherShittyCalcParser.MINUS, i);
		}
		public List<TerminalNode> SPACES() { return getTokens(AnotherShittyCalcParser.SPACES); }
		public TerminalNode SPACES(int i) {
			return getToken(AnotherShittyCalcParser.SPACES, i);
		}
		public AdditionExpContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_additionExp; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AnotherShittyCalcVisitor ) return ((AnotherShittyCalcVisitor<? extends T>)visitor).visitAdditionExp(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AdditionExpContext additionExp() throws RecognitionException {
		AdditionExpContext _localctx = new AdditionExpContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_additionExp);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(138);
			((AdditionExpContext)_localctx).var = multiplyExp();
			setState(155);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,20,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(142);
					_errHandler.sync(this);
					_la = _input.LA(1);
					while (_la==SPACES) {
						{
						{
						setState(139);
						match(SPACES);
						}
						}
						setState(144);
						_errHandler.sync(this);
						_la = _input.LA(1);
					}
					setState(145);
					((AdditionExpContext)_localctx)._tset207 = _input.LT(1);
					_la = _input.LA(1);
					if ( !(_la==PLUS || _la==MINUS) ) {
						((AdditionExpContext)_localctx)._tset207 = (Token)_errHandler.recoverInline(this);
					}
					else {
						if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
						_errHandler.reportMatch(this);
						consume();
					}
					((AdditionExpContext)_localctx).ops.add(((AdditionExpContext)_localctx)._tset207);
					setState(149);
					_errHandler.sync(this);
					_la = _input.LA(1);
					while (_la==SPACES) {
						{
						{
						setState(146);
						match(SPACES);
						}
						}
						setState(151);
						_errHandler.sync(this);
						_la = _input.LA(1);
					}
					setState(152);
					((AdditionExpContext)_localctx).multiplyExp = multiplyExp();
					((AdditionExpContext)_localctx).vars.add(((AdditionExpContext)_localctx).multiplyExp);
					}
					} 
				}
				setState(157);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,20,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MultiplyExpContext extends ParserRuleContext {
		public AtomExpContext var;
		public Token MULT;
		public List<Token> ops = new ArrayList<Token>();
		public Token DIV;
		public Token MOD;
		public Token _tset240;
		public AtomExpContext atomExp;
		public List<AtomExpContext> vars = new ArrayList<AtomExpContext>();
		public List<AtomExpContext> atomExp() {
			return getRuleContexts(AtomExpContext.class);
		}
		public AtomExpContext atomExp(int i) {
			return getRuleContext(AtomExpContext.class,i);
		}
		public List<TerminalNode> MULT() { return getTokens(AnotherShittyCalcParser.MULT); }
		public TerminalNode MULT(int i) {
			return getToken(AnotherShittyCalcParser.MULT, i);
		}
		public List<TerminalNode> DIV() { return getTokens(AnotherShittyCalcParser.DIV); }
		public TerminalNode DIV(int i) {
			return getToken(AnotherShittyCalcParser.DIV, i);
		}
		public List<TerminalNode> MOD() { return getTokens(AnotherShittyCalcParser.MOD); }
		public TerminalNode MOD(int i) {
			return getToken(AnotherShittyCalcParser.MOD, i);
		}
		public List<TerminalNode> SPACES() { return getTokens(AnotherShittyCalcParser.SPACES); }
		public TerminalNode SPACES(int i) {
			return getToken(AnotherShittyCalcParser.SPACES, i);
		}
		public MultiplyExpContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_multiplyExp; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AnotherShittyCalcVisitor ) return ((AnotherShittyCalcVisitor<? extends T>)visitor).visitMultiplyExp(this);
			else return visitor.visitChildren(this);
		}
	}

	public final MultiplyExpContext multiplyExp() throws RecognitionException {
		MultiplyExpContext _localctx = new MultiplyExpContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_multiplyExp);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(158);
			((MultiplyExpContext)_localctx).var = atomExp();
			setState(175);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,23,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(162);
					_errHandler.sync(this);
					_la = _input.LA(1);
					while (_la==SPACES) {
						{
						{
						setState(159);
						match(SPACES);
						}
						}
						setState(164);
						_errHandler.sync(this);
						_la = _input.LA(1);
					}
					setState(165);
					((MultiplyExpContext)_localctx)._tset240 = _input.LT(1);
					_la = _input.LA(1);
					if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << MULT) | (1L << DIV) | (1L << MOD))) != 0)) ) {
						((MultiplyExpContext)_localctx)._tset240 = (Token)_errHandler.recoverInline(this);
					}
					else {
						if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
						_errHandler.reportMatch(this);
						consume();
					}
					((MultiplyExpContext)_localctx).ops.add(((MultiplyExpContext)_localctx)._tset240);
					setState(169);
					_errHandler.sync(this);
					_la = _input.LA(1);
					while (_la==SPACES) {
						{
						{
						setState(166);
						match(SPACES);
						}
						}
						setState(171);
						_errHandler.sync(this);
						_la = _input.LA(1);
					}
					setState(172);
					((MultiplyExpContext)_localctx).atomExp = atomExp();
					((MultiplyExpContext)_localctx).vars.add(((MultiplyExpContext)_localctx).atomExp);
					}
					} 
				}
				setState(177);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,23,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AtomExpContext extends ParserRuleContext {
		public Token n;
		public IntExprContext exp;
		public TerminalNode Literal() { return getToken(AnotherShittyCalcParser.Literal, 0); }
		public IntExprContext intExpr() {
			return getRuleContext(IntExprContext.class,0);
		}
		public List<TerminalNode> SPACES() { return getTokens(AnotherShittyCalcParser.SPACES); }
		public TerminalNode SPACES(int i) {
			return getToken(AnotherShittyCalcParser.SPACES, i);
		}
		public AtomExpContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_atomExp; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AnotherShittyCalcVisitor ) return ((AnotherShittyCalcVisitor<? extends T>)visitor).visitAtomExp(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AtomExpContext atomExp() throws RecognitionException {
		AtomExpContext _localctx = new AtomExpContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_atomExp);
		int _la;
		try {
			setState(195);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case Literal:
				enterOuterAlt(_localctx, 1);
				{
				setState(178);
				((AtomExpContext)_localctx).n = match(Literal);
				}
				break;
			case T__0:
				enterOuterAlt(_localctx, 2);
				{
				setState(179);
				match(T__0);
				setState(183);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==SPACES) {
					{
					{
					setState(180);
					match(SPACES);
					}
					}
					setState(185);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(186);
				((AtomExpContext)_localctx).exp = intExpr();
				setState(190);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==SPACES) {
					{
					{
					setState(187);
					match(SPACES);
					}
					}
					setState(192);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(193);
				match(T__1);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static final ATN _ATN =
		new ATNDeserializer().deserialize(_serializedATN.toCharArray());
	static {
		_decisionToDFA = new DFA[_ATN.getNumberOfDecisions()];
		for (int i = 0; i < _ATN.getNumberOfDecisions(); i++) {
			_decisionToDFA[i] = new DFA(_ATN.getDecisionState(i), i);
		}
	}
}